package gameLaby.laby.modele;

public class Monstre extends Position {
    /**
     * constructeur
     *
     * @param dx position selon x
     * @param dy position selon y
     */
    public Monstre(int dx, int dy) {
        super(dx, dy);
    }
}
